--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -15,6 +15,7 @@ $h6-font-size:      $font-size-base;
 
 body {
     margin: 0;
+    padding: 0;
     line-height: 1.5;
     color: black;
     background-color: white;
@@ -22,7 +23,7 @@ body {
 
 %heading {
     margin-top: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 h1 {
