--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -66,7 +66,7 @@ header {
 /* SECTION */
 section.hero {
     margin-top: $header-height;
-    background: url('../img/kuva-16.jpg');
+    background: url('../img/f1.jpg');
     background-position: top center;
     background-size: cover;
     height: 100vh;
