--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,28 +1,20 @@
-$font-size-base:    1rem;
-$h1-font-size:      $font-size-base * 3.5;
-$h2-font-size:      $font-size-base * 3;
-$h3-font-size:      $font-size-base * 2.75;
-$h4-font-size:      $font-size-base * 2.5;
-$h5-font-size:      $font-size-base * 2.25;
-$h6-font-size:      $font-size-base;
-$p-font-size:       $font-size-base * 1.75;
-
-$font-size-multiplier:    1.3;
+$font-size-base: 1rem;
 
 $header-font-sizes: (
-    h1: $h1-font-size,
-    h2: $h2-font-size,
-    h3: $h3-font-size,
-    h4: $h4-font-size,
-    h5: $h5-font-size,
-    h6: $h6-font-size,
+    h1: $font-size-base * 2.5,
+    h2: $font-size-base * 2,
+    h3: $font-size-base * 1.75,
+    h4: $font-size-base * 1.5,
+    h5: $font-size-base * 1.25,
+    h6: $font-size-base,
 );
 
 $media-breakpoints: (
-    0: 0,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1140px,
+    xxl: 1320px
 );
 
 $header-height: 70px;
